--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+Whoosh==2.6.0
 beautifulsoup4==4.3.2
 clint==0.3.1
-requests==2.0.1
-sunlight==1.2.1
+numpy==1.8.1
+pandas==0.13.1
+python-dateutil==2.2
+pytz==2014.2
+requests==2.2.1
+seaborn==0.3
+six==1.6.1
+sunlight==1.2.5
+wsgiref==0.1.2
