Git ignore mac PyCharm folder and Mac breadcrumb Ds_Store files - to conform to standards.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# GitIgnore file specifies folders and files to ignore during commit.
+
 *.py[cod]
+
+# Pycharm, Intellij folder
+.idea
+
+# Mac only 
+.DS_Store
 
 # C extensions
 *.so
